--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
-.App {
+.App .background {
   text-align: center;
+  max-width: 800px;
+  margin: 30px auto;
+  border: 5px solid #f5c76e;
+  border-radius: 10px;
+  background-image: url("./images/dictionary.jpg");
+  background-size: cover;
+}
+
+.App footer {
+  font-size: 11px;
+  margin: 5px 0;
+  text-align: center;
+}
+
+.App .dictionary-box {
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  color: white;
+  padding: 15px 25px;
+  display: block;
+  max-width: fit-content;
+  max-height: fit-content;
+  margin: 20px auto;
 }
