--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App .background {
   text-align: center;
-  max-width: 800px;
+  max-width: 600px;
   margin: 30px auto;
   border: 5px solid #f5c76e;
   border-radius: 10px;
-  background-image: url("./images/dictionary.jpg");
+  background-image: url("./images/dictionary-big.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .App footer {
