--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App .background {
   text-align: center;
   max-width: 600px;
-  margin: 30px auto;
+  margin: 30px auto 10px;
   border: 5px solid #f5c76e;
   border-radius: 10px;
   background-image: url("./images/dictionary-big.jpg");
@@ -11,7 +11,6 @@
 
 .App footer {
   font-size: 11px;
-  margin: 5px 0;
   text-align: center;
 }
 
