--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -7,4 +7,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0 0 16px 16px;
   margin-top: 20px;
+  font-weight: bold;
+  font-size: 20px;
+  color: rgb(43, 40, 40);
 }
