added photo api integration and styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
-  margin: 20px;
+  max-width: 800px;
+  margin: 20px auto;
 }
 
 .App .background {
-  max-width: 600px;
-  margin: 30px auto 10px;
   border: 5px solid #132819;
   border-radius: 10px;
   background-image: url("./images/color-books.png");
@@ -22,4 +21,8 @@
 .App-header-2 {
   text-align: center;
   color: rgb(43, 40, 40);
+}
+
+.App p.pexels-link {
+  text-align: center;
 }
