--- a/src/Photos.css
+++ b/src/Photos.css
@@ -1,4 +1,4 @@
-.Results section {
+.Photos {
   text-align: left;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
@@ -9,8 +9,7 @@
   margin: 20px auto;
 }
 
-.Results h2 {
-  font-size: 32px;
-  font-weight: bold;
-  line-height: 1.5;
+.Photos img {
+  border-radius: 4px;
+  margin-bottom: 20px;
 }
